Closed Bug 1605419 Opened 6 years ago Closed 6 years ago

Whitelisting the meet.jit.si domain doesn't block the mDNS

Categories

(Core :: WebRTC: Networking, defect, P2)

72 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla73
Tracking Status
firefox72 --- verified
firefox73 --- verified

People

(Reporter: asoncutean, Assigned: dminor)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

[Affected versions]:

  • 72.0b9

[Affected platforms]:

  • all platforms

[Steps to reproduce]:

  1. Add meet.jit.si inside media.peerconnection.ice.obfuscate_host_addresses.whitelist pref
  2. Create a room and initiate/join a call on two ends
  3. Go to about:webrtc page

[Expected result]:

  • IP addresses are not hidden

[Actual result]:

  • mDNS addresses are generated

[Regression range]:

  • I will come back with more info on Monday

[Additional notes]:

  • File.pizza and talky.io worked just fine
  • Different variants around this domain didn't work either
Assignee: nobody → dminor
Priority: -- → P2

The problem is that the jit.si site has:

<base href="https://web-cdn.jitsi.net/meetjitsi_3773.460/">

in its html, which is causing the hostname to show up to the code as web-cdn.jitsi.net. If I whitelist that url, things work as expected. I'll do some more checking to see if we should be handling things differently.

We don't need a regression window for this, this was not a case that was considered when the whitelist was implemented, and may end up being a site issue.

Sure enough I was using GetDocBaseURI() rather than GetDocumentURI(). I don't think there is any reason to not use GetDocumentURI() here.

Pushed by dminor@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/acff67865a1e Use GetDocumentURI instead of GetDocBaseURI for hostname obfuscation whitelist; r=jib
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73

Comment on attachment 9117355 [details]
Bug 1605419 - Use GetDocumentURI instead of GetDocBaseURI for hostname obfuscation whitelist; r=jib!

Beta/Release Uplift Approval Request

  • User impact if declined: Limits the ability to whitelist disabling hostname obfuscation for some domains.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very low, we're just switching the api call used to get the document uri, which should not make a difference for the majority of sites.
  • String changes made/needed: None
Attachment #9117355 - Flags: approval-mozilla-beta?

Comment on attachment 9117355 [details]
Bug 1605419 - Use GetDocumentURI instead of GetDocBaseURI for hostname obfuscation whitelist; r=jib!

approved for 72.0b11

Attachment #9117355 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+

This issue is verified fixed with Fx 72.0b11 and Fx 73.0a1 (2019-12-26) on Windows 10 x64, macOS 10.15 and Ubuntu 18.04 x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: