Bug 1605419 - Use GetDocumentURI instead of GetDocBaseURI for hostname obfuscation whitelist; r=jib a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D58040